[package]
name = "aaudio-sys"
version = "0.1.0"
authors = ["Ruslan Mustakov <r.mustakov@gmail.com>"]
description = "Low-level interface for the AAudio API."
repository = "https://github.com/RustAudio/cpal/"
documentation = "https://docs.rs/aaudio-sys"
license = "Apache-2.0"
keywords = ["audio", "sound", "aaudio", "android"]
link = "aaudio"

[dependencies]
libc = "0.2"